partially fixed layout issues, including ui design... continued

--- a/public/main.css
+++ b/public/main.css
@@ -180,13 +180,27 @@ a:hover {
     text-shadow: 0 0 16px white;
 }
 
-#topic-group {
-    /* border: 2px solid rgba(255, 255, 0, 0); */
+#fadable {
+    transition: all 500ms;
+}
+
+#topic-group{
     border-radius: 5px;
     margin-bottom: 4px;
 }
 
 #topic-group:hover {
+    background-color: rgba(255, 255, 0, 0.5);
+}
+
+#category-group {
+    width: fit-content;
+    padding: 0 10px 0 10px;
+    border-radius: 5px;
+    margin-bottom: 4px;
+}
+
+#category-group:hover {
     background-color: rgba(255, 255, 0, 0.5);
 }
 
@@ -227,6 +241,34 @@ a:hover {
     scrollbar-width: none;
 }
 
+.button-container {
+    position: relative;
+}
+
+.random-button {
+    /* display: block !important;
+    position: absolute !important; */
+    height: 30px;
+    background-color: rgba(255, 255, 0, 0.611) !important;
+}
+
+.wrappers {
+    padding: 40px 30px;
+    background-color: rgba(255, 239, 213, .5);
+    backdrop-filter: blur(8px);
+    box-shadow: 0 0 10px #000,
+    inset 0 0 60px rgba(255, 255, 255, 0.148);
+    border-radius: 1px;
+    border-bottom-left-radius: 8px;
+    transition: all 500ms;
+}
+
+.wrappers-overflow {
+    overflow: hidden;
+    overflow-y: auto;
+    scrollbar-width: none;
+}
+
 .signin-wrapper {
     min-width: 300px;
     max-width: 500px;
@@ -241,27 +283,9 @@ a:hover {
     transition: all 500ms;
 }
 
-.wrappers {
-    padding: 40px 30px;
-    /* border: 2px solid rgba(6, 35, 57, .5); */
-    /* background-color: rgb(79, 137, 79, .85); */
-    /* background-color: #004766a5; */
-    /* background-color: rgba(0, 0, 0, 0.582); */
-    background-color: rgba(255, 239, 213, .5);
-    backdrop-filter: blur(8px);
-    box-shadow: 0 0 10px #000,
-    inset 0 0 60px rgba(255, 255, 255, 0.148);
-    border-radius: 1px;
-    border-bottom-left-radius: 8px;
-    transition: all 500ms;
-    overflow: hidden;
-    overflow-y: auto;
-    scrollbar-width: none;
-}
-
 .all-wrapper {
-    min-height: 91.28vh;
-    max-height: 91.28vh;
+    min-height: 1214px;
+    max-height: 1214px;
 }
 
 .single-wrapper {
@@ -301,6 +325,7 @@ a:hover {
     color: rgb(0, 0, 0);
     text-shadow: 0 0 .125px rgba(255, 255, 255, 0.5);
 }
+
 #selectable::selection {
     background-color: rgba(255, 255, 0, 0.611) !important;
 }
